js/js.translator/testData/incremental/invalidation/interfaceWithJsExport/lib1/lib.1.kt
@JsExport
interface Foo {
    fun foo(): String
}